<resources>
    <string name="app_name">ejercicio1</string>
    <string name="stNombre">Nombre</string>
    <string name="stApellidos">Apellidos</string>
    <string name="stNumCuenta">Numero de cuenta</string>
    <string name="stFechaNaci">Fecha de nacimiento:</string>
    <string name="stFechaNaciDia">Día</string>
    <string name="stFechaNaciMes">Mes</string>
    <string name="stFechaNaciAno">Año</string>
    <string name="stCarrera">Carrera:</string>
    <string name="stGuardar">Guardar</string>
    <string name="stErrorNombre">Se requiere un nombre</string>
    <string name="stErrorApellidos">Se requieren sus apellidos</string>
    <string name="stErrorCarrera">Se requiere que selecciones tu carrera </string>
    <string name="stErrorNumCuenta">Se requiere un numero de 9 digitos</string>
    <string name="stErrorFechaNaciDia">Se requiere seleciones tu dia de nacimiento</string>
    <string name="stErrorFechaNaciMes">Se requiere seleciones tu mes de nacimiento</string>
    <string name="stErrorFechaNaciAno">Se requiere seleciones tu año de nacimiento</string>
    <string name="stIngAeroesp">Ingeniería Aeroespacial</string>
    <string name="stIngCiv">Ingeniería Civil</string>
    <string name="stIngGeom">Ingeniería Geomática</string>
    <string name="stIngAmb">Ingeniería Ambiental</string>
    <string name="stIngGeof">Ingeniería Geofísica</string>
    <string name="stIngGeol">Ingeniería Geológica</string>
    <string name="stIngPetro">Ingeniería Petrolera</string>
    <string name="stIngMinYMet">Ingeniería de Minas y Metalurgia</string>
    <string name="stIngComp">Ingeniería en Computación</string>
    <string name="stIngEleEle">Ingeniería Eléctrica Electrónica</string>
    <string name="stIngTeleCom">Ingeniería en Telecomunicaciones</string>
    <string name="stIngMecani">Ingeniería Mecánica</string>
    <string name="stIngIndus">Ingeniería Industrial</string>
    <string name="stIngMecatro">Ingeniería Mecatrónica</string>
    <string name="stIngSistBio">Ingeniería en Sistemas Biomédicos</string>
    <string name="stCadenaVacia"></string>
    <string name="st01">01</string>
    <string name="st02">02</string>
    <string name="st03">03</string>
    <string name="st04">04</string>
    <string name="st05">05</string>
    <string name="st06">06</string>
    <string name="st07">07</string>
    <string name="st08">08</string>
    <string name="st09">09</string>
    <string name="st10">10</string>
    <string name="st11">11</string>
    <string name="st12">12</string>
    <string name="st13">13</string>
    <string name="st14">14</string>
    <string name="st15">15</string>
    <string name="st16">16</string>
    <string name="st17">17</string>
    <string name="st18">18</string>
    <string name="st19">19</string>
    <string name="st20">20</string>
    <string name="st21">21</string>
    <string name="st22">22</string>
    <string name="st23">23</string>
    <string name="st24">24</string>
    <string name="st25">25</string>
    <string name="st26">26</string>
    <string name="st27">27</string>
    <string name="st28">28</string>
    <string name="st29">29</string>
    <string name="st30">30</string>
    <string name="st31">31</string>
    <string name="st1990">1990</string>
    <string name="st1991">1991</string>
    <string name="st1992">1992</string>
    <string name="st1993">1993</string>
    <string name="st1994">1994</string>
    <string name="st1995">1995</string>
    <string name="st1996">1996</string>
    <string name="st1997">1997</string>
    <string name="st1998">1998</string>
    <string name="st1999">1999</string>
    <string name="st2000">2000</string>
    <string name="st2001">2001</string>
    <string name="st2002">2002</string>
    <string name="st2003">2003</string>
    <string name="st2004">2004</string>
    <string name="st2005">2005</string>
    <string name="st2006">2006</string>
    <string name="st2007">2007</string>
    <string name="st2008">2008</string>
    <string name="st2009">2009</string>
    <string name="st2010">2010</string>
    <string name="stEdad">Edad:</string>


</resources>